--- a/sources/scss/components/_dropzone.scss
+++ b/sources/scss/components/_dropzone.scss
@@ -1,5 +1,5 @@
-.dropzone {
-  border: 2px dashed color(primary);
+div.dropzone {
+  border: 2px color(primary);
   min-height: 240px;
   text-align: center;
   .dz-message {
