--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -726,6 +726,37 @@ section {
   color: var(--color-primary);
 }
 
+/**--------------------------------
+Organisasi
+---------------------------------*/
+.tree {
+  list-style-type: none;
+  padding: 0;
+  position: relative;
+  margin-top: 20px;
+}
+
+.tree-node {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  position: relative;
+  margin: 0 20px;
+}
+
+.tree-line {
+  position: absolute;
+  border-left: 1px solid #000;
+  height: 100%;
+  top: 50%;
+}
+
+.tree-node>ul {
+  padding: 0;
+  list-style-type: none;
+  position: relative;
+}
+
 /*--------------------------------------------------------------
 # Services List Section
 --------------------------------------------------------------*/
